fix margin top on footer on iphone screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,7 +552,7 @@ footer ul {
    }
     footer {
         height: 75px;
-        margin-top: 650px;
+        margin-top: 5%;
    }
     .top-footer h3 {
         margin:0;
